// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownButton> Conditions should fail when more than 2 children are given 1`] = `"<DropdownButton> cannot have more than 2 children (got 3)!"`;

exports[`<DropdownButton> Conditions should fail when more than 2 children are given 2`] = `"<DropdownButton> cannot have more than 2 children (got 3)!"`;

exports[`<DropdownButton> Conditions should fail when more than 2 children are given 3`] = `"<DropdownButton> cannot have more than 2 children (got 3)!"`;

exports[`<DropdownButton> Conditions should fail when more than 2 children are given 4`] = `"<DropdownButton> cannot have more than 2 children (got 3)!"`;

exports[`<DropdownButton> Snapshots and structure should render correctly a non-splitted dropdown button 1`] = `
<Fragment>
  <Button
    className="lumx-dropdown-button"
    onClick={[Function]}
    variant="button"
  >
    Label
    <Icon
      icon="M7,10L12,15L17,10H7Z"
    />
  </Button>
</Fragment>
`;

exports[`<DropdownButton> Snapshots and structure should render correctly a non-splitted dropdown button with a preceding icon 1`] = `
<Fragment>
  <Button
    className="lumx-dropdown-button"
    onClick={[Function]}
    variant="button"
  >
    <Icon
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    />
    Label
    <Icon
      icon="M7,10L12,15L17,10H7Z"
    />
  </Button>
</Fragment>
`;

exports[`<DropdownButton> Snapshots and structure should render correctly a splitted dropdown button 1`] = `
<Fragment>
  <ButtonGroup
    className="lumx-dropdown-button lumx-dropdown-button--is-splitted"
  >
    <Button
      variant="button"
    >
      Label
    </Button>
    <IconButton
      onClick={[Function]}
    >
      <Icon
        icon="M7,10L12,15L17,10H7Z"
      />
    </IconButton>
  </ButtonGroup>
</Fragment>
`;

exports[`<DropdownButton> Snapshots and structure should render correctly a splitted dropdown button with a preceding icon 1`] = `
<Fragment>
  <ButtonGroup
    className="lumx-dropdown-button lumx-dropdown-button--is-splitted"
  >
    <Button
      variant="button"
    >
      <Icon
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
      Label
    </Button>
    <IconButton
      onClick={[Function]}
    >
      <Icon
        icon="M7,10L12,15L17,10H7Z"
      />
    </IconButton>
  </ButtonGroup>
</Fragment>
`;
